# choco-solver-capi

./: .gitignore  CMakeLists.txt  build.sh  pom.xml
src/main/java/org/chocosolver/capi/: ArrayApi.java  AutomatonApi.java  BoolVarApi.java  Constants.java  ConstraintApi.java  CriterionApi.java  GraphApi.java  GraphVarApi.java  HandlesApi.java  ISatFactoryApi.java  ISupportableApi.java  IntVarApi.java  ListApi.java  LogOpApi.java  ModelApi.java  MultivaluedDecisionDiagramApi.java  ParallelPortfolioApi.java  ReificationApi.java  SearchApi.java  SetVarApi.java  SettingsApi.java  SettingsBuilderApi.java  SolutionApi.java  SolverApi.java  TaskApi.java  Test.java  TuplesApi.java  VariableApi.java  ViewApi.java
